# saavu

./: README.md  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml
.github/workflows/: deploy-prod.yml  deploy-staging.yml  deploy.yml
backend/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.prod
backend/migrations/: 20250527191026_initialize-events-table.sql  20250529065841_add-feature.sql  20250602104758_relation.sql
backend/src/: main.rs
frontend/: Dockerfile  Dockerfile.prod
frontend/nginx/: prod.conf
frontend/public/: index.html  main.js  style.css
frontend/src/: Event.elm  Feature.elm  Main.elm  Relation.elm  Route.elm
frontend/src/Pages/: Admin.elm  CreateEvent.elm  Event.elm  Home.elm
nginx/: default.conf
