[package]
name = "saavu-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
dotenvy = "0.15.7"
hyper = { version = "1.6.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1.45.1", features = ["full"] }
tower-http = { version = "0.6.4", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }
uuid = { version = "1.17.0", features = ["v4"] }
